<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.V_Login.Login_View">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.6"
        android:background="@drawable/edit_round">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="207dp"
            android:layout_height="204dp"
            android:layout_centerInParent="true"
            android:background="@drawable/logo" />
    </RelativeLayout>
        
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/paddin_horizontal_login"
                android:gravity="center">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:theme="@style/EditTextWhite"
                    android:layout_marginBottom="12dp">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txt_email"
                        android:background="@drawable/txt_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_username"
                        android:padding="16dp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:theme="@style/EditTextWhite">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txt_password"
                        android:background="@drawable/txt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:padding="16dp"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_comenzar"
                    android:text="@string/text_button_login"
                    android:textColor="@android:color/white"
                    android:theme="@style/RaisedButtonDark"
                    android:layout_marginTop="24dp"
                    />

                <RelativeLayout
                    android:layout_marginTop="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    >

                    <TextView
                        android:id="@+id/dontHaveAccont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dont_have_account"
                        android:textColor="#2699FB"
                        android:textStyle="bold"
                        android:textSize="@dimen/textsize_donthaveaccount"/>

                    <TextView
                        android:id="@+id/createHere"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_here"
                        android:textColor="#2699FB"
                        android:textStyle="bold"
                        android:textSize="@dimen/textsize_donthaveaccount"
                        android:layout_toRightOf="@+id/dontHaveAccont"
                        android:onClick="goCreate_Account"
                        />
                </RelativeLayout>

                <ImageView
                    android:layout_margin="16dp"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_crab"/>

            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>